# service-swat-collector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  cargo.tree  docker-compose.test.yml  locations.toml
src/: health_check.rs  locations.rs  main.rs  webhook.rs
src/health_check/: mod.rs  unix.rs  windows.rs
