[package]
name = "swat-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
health-check = ["dirs"]

[dependencies.influxdb2]
version = "0.5"
default-features = false
features = ["rustls"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.static-toml]
version = "1"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.twilight-model]
version = "0.15"

[dependencies.twilight-http]
version = "0.15"

[dependencies.twilight-validate]
version = "0.15"

[dependencies.twilight-util]
version = "0.15"
features = ["builder"]

[dependencies.warp]
version = "0.3"

[dependencies.thiserror]
version = "1"

[dependencies.chrono]
version = "0.4"

[dependencies.futures]
version = "0.3"

[dependencies.log]
version = "0.4"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.dirs]
version = "5"
optional = true
